--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.11.5",
     "twilio": "^5.0.4"
   }
